# PexelPaper

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
src/: app.html  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dirpath_test.rs  file_selection.rs  grab_wallpaper_image  grab_wallpaper_image.rs  list_wallpapers.rs  main.rs  test_command.rs  video_handling.rs  video_playing.rs  wallpaper  wallpaper.rs  wallpaper_handler  wallpaper_handler.rs
src/lib/components/path/: PathButton copy.svelte  PathButton.svelte  PathSelection.svelte  SearchInput.svelte
src/lib/components/video/: WallpaperPreview.svelte
src/lib/components/wallpapers/: Select.svelte  Wallpaper.svelte  WallpaperArea.svelte
src/lib/components/window/: Titlebar.svelte  WIndow.svelte  Window.svelte
src/lib/middleware/: store.js  store.ts
src/lib/models/: store.ts
src/routes/: +page.svelte
