[package]
name = "app"
version = "0.1.0"
description = "Free dynamic wallpaper application using the plex api"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.72.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-minimize", "window-set-cursor-grab", "window-set-max-size", "window-set-focus", "window-set-fullscreen", "window-maximize", "window-create", "window-set-ignore-cursor-events", "window-set-maximizable", "window-set-resizable", "window-set-decorations", "window-unminimize", "window-set-closable", "window-unmaximize", "window-set-size", "window-set-minimizable", "window-set-always-on-top", "window-print", "window-set-icon", "window-set-cursor-visible", "window-close", "window-set-content-protected", "window-set-title", "window-set-skip-taskbar", "window-set-position", "window-set-cursor-position", "window-start-dragging", "window-hide", "window-set-min-size", "window-set-cursor-icon", "window-show", "window-center", "window-request-user-attention"] }
async-std = "1.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
